// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order should take a snapshot with order has length 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-24"
    >
      <div
        class="ant-divider ant-divider-horizontal ant-divider-with-text-center"
        role="separator"
      >
        <span
          class="ant-divider-inner-text"
        >
          Your orders:
        </span>
      </div>
      <div
        class="ant-collapse ant-collapse-icon-position-left"
      >
        <div
          class="ant-collapse-item"
        >
          <div
            aria-expanded="false"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
            2020/04/28
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order should take a snapshot with order has no length 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-24"
    >
      <div
        class="ant-divider ant-divider-horizontal ant-divider-with-text-center"
        role="separator"
      >
        <span
          class="ant-divider-inner-text"
        >
          Your orders:
        </span>
      </div>
      <div
        class="ant-row ant-row-center"
      >
        <div
          class="ant-alert ant-alert-error ant-alert-no-icon"
          data-show="true"
        >
          <span
            class="ant-alert-message"
          >
            You don't have any order today. Please book our pizzas
          </span>
          <span
            class="ant-alert-description"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
